--- a/sound/soc/tegra/Makefile
+++ b/sound/soc/tegra/Makefile
@@ -10,4 +10,5 @@ obj-$(CONFIG_TEGRA_VOODOO_SOUND)+= voodoo-sound.o
 obj-$(CONFIG_TEGRA_GENERIC_CODEC)+= tegra_generic_codec.o
 obj-${CONFIG_SND_SOC_WM8903}    += tegra_soc_wm8903.o
 obj-${CONFIG_SND_SOC_WM8753}    += tegra_soc_wm8753.o
+#obj-${CONFIG_SND_SOC_TLV320AIC326X}    += tegra_soc_aic326x.o
 obj-$(CONFIG_HEADSET_FUNCTION)	+= headset.o
